--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
 </head>
 
 <body>
+    <section id="app-title">
+        <h1 id="main-title">One Awesome Health Tracker</h1>
+    </section>
+    <section id="search-section">
+        <label for="search-box">Search for what you consumed </label>
+        <input id="search-box" placeholder="What did you eat or drink?"></input>
+    </section>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.3.3/backbone-min.js"></script>
