--- a/index.html
+++ b/index.html
@@ -13,8 +13,25 @@
     </section>
     <section id="search-section">
         <label for="search-box">Search for what you consumed </label>
-        <input id="search-box" placeholder="What did you eat or drink?"></input>
+        <input class="searchbox" id="search-box" placeholder="What did you eat or drink?"></input>
+        <table id="search-list">
+        </table>
     </section>
+
+    <section id="log-section">
+        <h3 id="log-title">Daily Log</h3>
+        <table id="log-list">
+        </table>
+    </section>
+
+    <script type="text/template" id="result-tmpl">
+        <tr class="result-item">
+        <td><%= name %><span id="brand-name">(<%= brandName %>)</span></td>
+        <td><span id="calories"><%= calories %></span> calories</td>
+        <td><span id="serving"><%= serving %></span></td>
+        <td><button data-id="<%= id %>">Log</button></td>
+        </tr>
+    </script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.3.3/backbone-min.js"></script>
