--- a/index.html
+++ b/index.html
@@ -7,9 +7,20 @@
 </head>
 
 <body>
-    <section id="app-title">
-        <h1 id="main-title">One Awesome Health Tracker</h1>
-    </section>
+    <div class="row">
+        <section class="col-xs-6" id="app-title">
+            <h1 id="main-title">One Awesome Health Tracker</h1>
+        </section>
+        <section class="col-xs-6" id="goal-section">
+            <div class="row">
+                <h2 id="goal-title">Enter your calorie intake goal</h2>
+            </div>
+            <div class="row">
+                <input id="goal-input" type="text" placeholder="Calories"></input>
+                <button id="goal-save">Save</button>
+            </div>
+        </section>
+    </div>
     <section id="search-section">
         <label for="search-box">Search for what you consumed </label>
         <input class="searchbox" id="search-box" placeholder="What did you eat or drink?"></input>
@@ -29,6 +40,10 @@
             Total Calories Consumed Today: <span></span>
         </div>
     </section>
+    <div class="row">
+        <h3 class="col-xs-12 text-center" id="goal-status"></h3>
+    </div>
+    <div id="chart-container" style="width: 300px, height: 300px"></div>
     <script type="text/template" id="result-tmpl">
         <tr class="result-item">
             <td class="col-sm-3">
@@ -65,6 +80,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.3.3/backbone-min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/canvasjs/1.7.0/canvasjs.min.js"></script>
     <link rel="stylesheet" href="assets/style.css">
     <script src="js/app.js"></script>
 </body>
