--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="utf-8">
     <title>Shamwow's Health Tracker</title>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Lato:700' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
@@ -11,73 +13,90 @@
         <section class="col-xs-6" id="app-title">
             <h1 id="main-title">One Awesome Health Tracker</h1>
         </section>
-        <section class="col-xs-6" id="goal-section">
-            <div class="row">
-                <h2 id="goal-title">Enter your calorie intake goal</h2>
-            </div>
-            <div class="row">
-                <input id="goal-input" type="text" placeholder="Calories"></input>
-                <button id="goal-save">Save</button>
-            </div>
-        </section>
+        <div class="container">
+            <section class="col-xs-6 text-right" id="goal-section">
+                <div class="row">
+                    <h2 id="goal-title">Enter your calorie intake goal</h2>
+                </div>
+                <div class="row">
+                    <input id="goal-input" type="text"></input>
+                    <button id="goal-save">Save</button>
+                </div>
+            </section>
+        </div>
     </div>
     <section id="search-section">
-        <label for="search-box">Search for what you consumed </label>
-        <input class="searchbox" id="search-box" placeholder="What did you eat or drink?"></input>
-        <table id="search-list">
-        </table>
-    </section>
-    <section id="log-section">
-        <h3 id="log-title">Daily Log</h3>
-        <table id="log-list">
-            <th class="table-header">Name</th>
-            <th class="table-header">Calories</th>
-            <th class="table-header">Serving Size</th>
-        </table>
-    </section>
-    <section id="total-section">
-        <div id="total-calories">
-            Total Calories Consumed Today: <span></span>
+        <div class="row">
+            <div class="col-xs-6 text-left">
+                <label for="search-box">Search for what you consumed </label>
+                <input class="searchbox" id="search-box" placeholder="What did you eat or drink?"></input>
+            </div>
+            <h3 class="col-xs-6 text-right" id="goal-status"></h3>
+        </div>
+        <div class="row">
+            <table class="col-xs-5 pull-left" id="search-list">
+            </table>
+            <div class=" text-right col-xs-offset 4 col-xs-4 pull-right " id="chart-container" style="height: 300px"></div>
         </div>
     </section>
-    <div class="row">
-        <h3 class="col-xs-12 text-center" id="goal-status"></h3>
-    </div>
-    <div id="chart-container" style="width: 300px, height: 300px"></div>
+    <section id="log-section">
+        <h3 id="log-title" class="text-center">Daily Log</h3>
+        <div class="row text-center">
+            <div class="col-xs-12 text-center">
+                <table class="col-xs-12 text-center" id="log-list">
+                    <th class="col-xs-2 table-header">Name</th>
+                    <th class="col-xs-2 table-header">Calories</th>
+                    <th class="col-xs-2 table-header">Serving Size</th>
+                </table>
+            </div>
+        </div>
+    </section>
+    <section id="total-section">
+        <div class="row" id="total-calories">
+            <div class="container text-center">
+                <h3 class="col-xs-12 text-center">Total Calories Consumed Today: <span>0</span></h3>
+            </div>
+        </div>
+    </section>
     <script type="text/template" id="result-tmpl">
         <tr class="result-item">
-            <td class="col-sm-3">
+            <td>
                 <%= name %><span id="brand-name">(<%= brandName %>)</span></td>
-            <td class="col-sm-3"><span id="calories" class="col-sm-12"><%= totalCalories %> calories</span></td>
-            <td class="col-sm-2"><span data-id="<%= cid %>" class="serving-size"><%= servingSize %></span>
+            <td><span id="calories"><%= totalCalories %>  calories</span></td>
+            <td><span data-id="<%= cid %>" class="serving-size"><%= servingSize %></span>
                 <a href="#" id="edit-icon">
                     <span class="glyphicon glyphicon-pencil"></span>
                 </a>
             </td>
             <td><span class="serving-unit"><%= servingUnit %></span></td>
             <td>
-                <button data-id="<%= cid %>">Log</button>
+                <button class="btn" data-id="<%= cid %>">Log</button>
             </td>
         </tr>
     </script>
     <script type="text/template" id="log-tmpl">
-        <tr class="log-item">
-            <td>
-                <%= name %><span id="brand-name">(<%= brandName %>)</span></td>
-            <td><span id="calories"><%= totalCalories %></span> calories</td>
-            <td><span class="serving-size"><%= servingSize %></span>
-            </td>
-            <td><span class="serving-unit"><%= servingUnit %></span></td>
-            <td id="remove">
+        <tr class="log-item text-center">
+            <td class="col-xs-2">
                 <a href="#" data-id="<%= cid %>" id="remove-icon">
                     <span class="glyphicon glyphicon-remove"></span>
                 </a>
+                <%= name %><span id="brand-name">(<%= brandName %>)</span></td>
+            <td class="col-xs-2"><span id="calories"><%= totalCalories %></span> calories</td>
+            <td class="col-xs-2 "><span class="serving-size"><%= servingSize %> <span class="serving-unit"> <%= servingUnit %></span></span>
             </td>
+            <!-- <td><span class="serving-unit"></span></td> -->
+            <!--  <td class="col-xs-2" id="remove">
+               <a href="#" data-id="<%= cid %>" id="remove-icon">
+                   <span class="glyphicon glyphicon-remove"></span>
+               </a>
+           </td> -->
         </tr>
     </script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.3.3/backbone-min.js"></script>
+    <script src="https://cdn.firebase.com/js/client/2.4.2/firebase.js"></script>
+    <script src="https://cdn.firebase.com/libs/backbonefire/0.5.1/backbonefire.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/canvasjs/1.7.0/canvasjs.min.js"></script>
