--- a/index.html
+++ b/index.html
@@ -16,11 +16,12 @@
         <div>
             <h2 id="goal-title">Enter your calorie intake goal</h2>
         </div>
-        <input id="goal-input" type="text"></input>
-        <button id="goal-save">Save</button>
+        <input id="goal-input" type="number"></input>
+        <button class="btn btn-primary" style="display:none" id="goal-save">Save</button>
+        <button class="btn btn-info" id="goal-update">Update</button>
     </section>
-    <div class="col-sm-12">
-        <section id="search-section">
+    <section id="search-section">
+        <div class="col-sm-12">
             <div class="row">
                 <div class="col-xs-6 text-left">
                     <label for="search-box">Search for what you consumed </label>
@@ -32,8 +33,8 @@
                 <table class="col-xs-5 pull-left" id="search-list">
                 </table>
             </div>
-        </section>
-    </div>
+        </div>
+    </section>
     <div class="col-sm-12">
         <section id="log-section">
             <h3 id="log-title" class="text-center">Daily Log</h3>
@@ -47,6 +48,9 @@
         </section>
     </div>
     <section id="total-section">
+        <div id="empty-log" class="text-center">
+            <h4>You have entered nothing for the day. Eat/Drink something!</h4>
+        </div>
         <div class="row" id="total-calories">
             <div class="container text-center">
                 <h3 class="col-xs-12 text-center">Total Calories Consumed Today: <span>0</span></h3>
@@ -57,15 +61,16 @@
         <tr class="result-item">
             <td>
                 <%= name %><span id="brand-name">(<%= brandName %>)</span></td>
-            <td><span id="calories"><%= totalCalories %>  calories</span></td>
+            <td><span id="calories"><%= Math.round(totalCalories) %>  calories</span></td>
             <td><span data-id="<%= cid %>" class="serving-size"><%= servingSize %></span>
                 <a href="#" id="edit-icon">
                     <span class="glyphicon glyphicon-pencil"></span>
                 </a>
+                <button data-id="<%= cid %>" class="serving-save-btn" style="visibility:hidden">Save</button>
             </td>
             <td><span class="serving-unit"><%= servingUnit %></span></td>
             <td>
-                <button class="btn" data-id="<%= cid %>">Log</button>
+                <button class="log-btn btn" data-id="<%= cid %>">Log</button>
             </td>
         </tr>
     </script>
@@ -76,7 +81,7 @@
                     <span class="glyphicon glyphicon-remove"></span>
                 </a>
                 <%= name %><span id="brand-name">(<%= brandName %>)</span></td>
-            <td class="col-xs-2"><span id="calories"><%= totalCalories %></span> calories</td>
+            <td class="col-xs-2"><span id="calories"><%= Math.round(totalCalories) %></span> calories</td>
             <td class="col-xs-2 "><span class="serving-size"><%= servingSize %> <span class="serving-unit"> <%= servingUnit %></span></span>
             </td>
         </tr>
@@ -88,7 +93,6 @@
     <script src="https://cdn.firebase.com/libs/backbonefire/0.5.1/backbonefire.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/canvasjs/1.7.0/canvasjs.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.13.0/moment.min.js"></script>
     <link rel="stylesheet" href="assets/style.css">
     <script src="js/app.js"></script>
